--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bruh">
-        <activity android:name=".RegisterOrganisationActivity"  android:theme="@style/Theme.AppCompat.Light.NoActionBar"> </activity>
+        <activity android:name=".OtherProfileActivity"></activity>
+        <activity
+            android:name=".RegisterOrganisationActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity android:name=".FindActivity" />
         <activity
             android:name=".HomeScreenActivity"
