--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,12 +8,8 @@
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	<error-page>
-		<error-code>404</error-code>
-		<location>/error/404.html</location>
-	</error-page>
-	<error-page>
-		<error-code>500</error-code>
-		<location>/error/500.html</location>
+    	<error-code>404</error-code>
+    	<location>/index.html</location>
 	</error-page>
 
 	<servlet>
