--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.10.3</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.google.cloud</groupId>
+    		<artifactId>google-cloud-storage</artifactId>
+    		<version>1.17.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
